# smaq-mlx

./: .gitignore  QUICKSTART.md  README.md  TODO.md  benchmark.py  pyproject.toml  requirements.txt  run_llm.py  test_leak.py
docs/: backend-api.md
examples/: basic_generate.py
smaq/: __init__.py  attention_smaq.py  block_vq.py  capture.py  kv_cache.py  patch.py  quantizer.py  score.py  store.py
smaq_mlx/: __init__.py  api.py  attention_smaq.py  backends.py  block_vq.py  capture.py  core.py  folded_cache.py  folded_turboquant.py  install.py  kv_cache.py  layout.py  patch.py  progressive_cache.py  quantizer.py  rotor_cache.py  rotor_ops.py  rotorquant.py  score.py  ssf.py  stacked_cache.py  store.py
smaq_mlx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_extended.py  test_smaq.py
